bug fix for z-index

--- a/cloze_builder/resources/default.css
+++ b/cloze_builder/resources/default.css
@@ -52,3 +52,7 @@ a {
   margin-top: 0.5em;
   margin-bottom: 2em;
 }
+
+.btn-group > .btn.active {
+  z-index: unset !important;
+}
